--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-router-dom": "^4.3.1",
+    "axios": "^0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
