--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.3",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
