--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^5.9.3",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
