--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -37,8 +38,10 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "reactstrap": "^8.4.1",
-    "react-chartjs-2": "^2.9.0"
+    "react": "^16.13.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.0",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
